fix alignment

--- a/app/okrt/page.module.css
+++ b/app/okrt/page.module.css
@@ -180,6 +180,7 @@
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   -webkit-box-orient: vertical;
   line-height: 1.4;
   flex: 1;
@@ -273,7 +274,6 @@
   align-items: center;
   gap: 1rem;
   width: 100%;
-  padding-right:5px;
 }
 
 /* Special horizontal layout for Key Results */
